kubernetes/apps/media/unpackerr/app/networkpolicy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: unpackerr
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: unpackerr
  egress:
    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/name: sonarr
            io.kubernetes.pod.namespace: media
      toPorts:
        - ports:
            - port: "8989"
              protocol: TCP
    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/name: radarr
            io.kubernetes.pod.namespace: media
      toPorts:
        - ports:
            - port: "7878"
              protocol: TCP
